# nixtla_conformalseasonalpool

./: README.md  aggregated_sales.csv  csp_universal_forecast.py  pyproject.toml  requirements.txt  test_stl.py  timeseries1.csv
.streamlit/: config.toml
streamlit_app/: __init__.py  config.py  main.py
streamlit_app/components/: __init__.py  app_shell.py
streamlit_app/pages/: 0_Home.py  1_Data_Upload.py  2_EDA.py  3_Column_Config.py  4_Forecast_Config.py  5_Forecast_Results.py  6_Model_Comparison.py  7_Download_Results.py
streamlit_app/utils/: __init__.py  data_loader.py  export.py  forecasting.py  path_setup.py  plotting.py
