[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csp-universal-forecast"
version = "0.2.0"
description = "Autonomous, robust, universal time-series forecasting using Nixtla's ConformalSeasonalPool (CSP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "statsforecast>=2.1.1",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["csp_universal_forecast*"]

[tool.ruff]
line-length = 100
target-version = "py310"